--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "graphql-tag": "^2.9.1",
     "graphql-tools": "^3.0.0",
     "history": "^4.6.3",
+    "lodash": "^4.17.10",
     "morgan": "^1.8.1",
     "passport": "^0.3.2",
     "passport-google-oauth": "^1.0.0",
