--- a/package.json
+++ b/package.json
@@ -35,8 +35,10 @@
     "graphql-tag": "^2.9.1",
     "graphql-tools": "^3.0.0",
     "history": "^4.6.3",
+    "install": "^0.11.0",
     "lodash": "^4.17.10",
     "morgan": "^1.8.1",
+    "npm": "^6.0.0",
     "passport": "^0.3.2",
     "passport-google-oauth": "^1.0.0",
     "pg": "^6.1.2",
@@ -47,6 +49,7 @@
     "react-dom": "^16.0.0",
     "react-redux": "^5.0.2",
     "react-router-dom": "^4.1.1",
+    "react-usa-map": "^1.3.0",
     "redux": "^3.6.0",
     "redux-logger": "^2.8.1",
     "redux-thunk": "^2.2.0",
@@ -66,6 +69,8 @@
     "babel-eslint": "^8.0.1",
     "babel-loader": "^8.0.0-beta.2",
     "chai": "^3.5.0",
+    "d3": "^5.1.0",
+    "datamaps": "^0.5.8",
     "enzyme": "^3.0.0",
     "enzyme-adapter-react-16": "^1.0.0",
     "eslint": "^4.10.0",
@@ -73,10 +78,12 @@
     "eslint-plugin-react": "^7.4.0",
     "mocha": "^3.3.0",
     "nodemon": "^1.12.1",
+    "object-assign": "^4.1.1",
     "react-test-renderer": "^16.0.0",
     "redux-devtools-extension": "^2.13.2",
     "redux-mock-store": "^1.2.3",
     "supertest": "^3.0.0",
+    "topojson": "^3.0.2",
     "webpack": "^4.0.1",
     "webpack-cli": "^2.0.9"
   }
